# devcx

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
src/: cache.rs  cli.rs  discovery.rs  main.rs  resolver.rs  runner.rs  selector.rs  workspace.rs
tests/: integration.rs
