[package]
name = "devcx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A smart wrapper for Dev Container CLI"
repository = "https://github.com/shutx-net/devcx"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = { version = "0.12.0", default-features = false }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
walkdir = "2.5.0"
which = "8.0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
